--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -2,13 +2,13 @@
 @import "~bulma/sass/utilities/_all";
 
 // Set your colors
-$primary: #9FEAF9;
+// $primary: #9FEAF9;
 $primary-invert: findColorInvert($primary);
 $twitter: #4099FF;
 $twitter-invert: findColorInvert($twitter);
-$navbar-background-color:#303241;
+// $navbar-background-color:#303241;
 $navbar-item-color:#fff;
-$link-hover:#9FEAF9;
+// $link-hover:#9FEAF9;
 $navbar-bottom-box-shadow:0;
 $navbar-bottom-border: 0;
 
