fixing item colors in menu and changed desscription and hover color

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -7,8 +7,8 @@ $primary-invert: findColorInvert($primary);
 $twitter: #4099FF;
 $twitter-invert: findColorInvert($twitter);
 // $navbar-background-color:#303241;
-$navbar-item-color:#fff;
-// $link-hover:#9FEAF9;
+$navbar-item-color:#F37137;
+$link-hover:#be470f;
 $navbar-bottom-box-shadow:#000;
 $navbar-bottom-border: #000;
 $navbar-item-img-max-height:2.50rem;
